# FlareEditor

./: .gitmodules  3RD-PARTY SOURCES.md  CMakeLists.txt  README.md  build.sh  buildDebug.sh  clean.sh  crossWinBuild.sh  crossWinSetup.sh  setup.bat  setup.sh
FlareEditor/: CMakeLists.txt  FlareEditorConfig.h.in
FlareEditor/include/: .gitignore  AppMain.h  Application.h  AssetLibrary.h  ConsoleCommand.h  FileDialog.h  FileHandler.h  FlareEditorConfig.h  GUI.h  Gizmos.h  IO.h  Logger.h  Model.h  PixelShader.h  ProcessManager.h  ProfilerData.h  Project.h  RuntimeManager.h  ShaderBuffers.h  ShaderProgram.h  Texture.h  VertexShader.h  Workspace.h
FlareEditor/include/Modals/: CreateProjectModal.h
FlareEditor/include/Runtime/: RuntimeManager.h  RuntimeStorage.h
FlareEditor/include/Windows/: AssetBrowserWindow.h  ConsoleWindow.h  ControlWindow.h  EditorWindow.h  GameWindow.h  HierarchyWindow.h  ProfilerWindow.h  PropertiesWindow.h  Window.h
FlareEditor/shaders/: grid.frag
FlareEditor/src/: AppMain.cpp  Application.cpp  AssetBrowserWindow.cpp  AssetLibrary.cpp  ConsoleWindow.cpp  ControlWindow.cpp  CreateProjectModal.cpp  EditorWindow.cpp  FileDialog.cpp  FileHandler.cpp  GUI.cpp  GameWindow.cpp  Gizmos.cpp  HierarchyWindow.cpp  IO.cpp  Logger.cpp  Modal.cpp  Model.cpp  MonoProjectGenerator.cpp  PixelShader.cpp  ProcessManager.cpp  ProfilerData.cpp  ProfilerWindow.cpp  Project.cpp  PropertiesWindow.cpp  RenderCommand.cpp  RuntimeManager.cpp  RuntimeStorage.cpp  ShaderProgram.cpp  VertexShader.cpp  Window.cpp  Workspace.cpp  main.cpp
FlareEditor/templates/: AssemblyControl.cs
FlareEditorBuildEngine/: FlareEditorBuildEngine.csproj
FlareEditorBuildEngine/src/: BuildOutputParser.cs  Logger.cs  Program.cs  ProjectGenerator.cs
FlareEditorCS/: FlareEditorCS.csproj
FlareEditorCS/src/: AssetProperties.cs  EditorWindow.cs  GUI.cs  Gizmos.cs  HierarchyWindow.cs  Logger.cs  Program.cs  PropertiesWindow.cs  SceneData.cs  Workspace.cs
FlareEditorCS/src/Editor/: EditorDisplay.cs  MeshRendererEditorDisplay.cs
FlareEditorCS/src/Properties/: CameraPropertiesWindow.cs  GameObjectProperties.cs  GameObjectPropertiesWindow.cs  PropertiesWindow.cs  SelectionObjectPropertiesWindow.cs
FlareEditorMonitor/: FlareEditorMonitor.csproj
FlareEditorMonitor/src/: FlareEditorAssemblyControl.cs
